<resources>
    <string name="app_name">Petetive</string>
    <string name="search_animal_menu">Procurar</string>
    <string name="cadastrar_txt">Cadastrar</string>
    <string name="login">Entrar</string>
    <string name="user_menu">Perfil</string>
    <string name="map_menu">Mapa</string>
    <string name="detalhes">Detalhes</string>
    <string name="txtLocal">Local:</string>
    <string name="txtNome">Nome:</string>
    <string name="txtDescricao">Descrição:</string>
    <string name="txtRaca">Raça:</string>
    <string name="hint_telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="atualizar">Atualizar</string>
    <string name="logout">Logout</string>
    <string name="descricao">Descrição</string>
    <string name="raca">Raça</string>
    <string name="nome_apelido">Nome/Apelido</string>
    <string name="local">Local</string>
    <string name="anexar_foto">Anexar foto</string>
    <string name="perdido">Pet perdido</string>
    <string name="pet_encontrado">Pet encontrado</string>
    <string name="perdidos">Perdidos</string>
    <string name="encontrados">Encontrados</string>
    <string name="escolha_um_avatar">Escolha um avatar:</string>
    <string name="cancelar">Cancelar</string>
</resources>
