<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_procurar"
        android:icon="@drawable/ic_search"
        android:title="@string/search_animal_menu"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_item_cadastrar"
        android:icon="@drawable/ic_writing"
        android:title="@string/cadastrar_txt"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_item_map"
        android:icon="@drawable/ic_map"
        android:title="@string/map_menu"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_item_user"
        android:icon="@drawable/ic_user"
        android:title="@string/user_menu"
        app:showAsAction="ifRoom"/>


</menu>